# secret-scanner

./: .gitignore  README.md  SECURITY.md  demo.cast  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
scanner/: baseline.py  cli.py  config.py  engine.py  entropy.py  ignorefile.py  patterns.py  reporter.py  verifier.py
scanner/github/: fetcher.py
tests/: test_scanner.py
