[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-scanner"
version = "0.2.0"
description = "CLI tool to detect leaked secrets and API keys in codebases and public GitHub repos — including git history"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.scripts]
secrets = "scanner.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]
